<resources>
    <string name="app_name">Suvidham</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="submit_button">Submit</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_sign_up">Sign Up</string>
    <string name="hint_log_in">Log in</string>
    <string name="new_account">Create New Account</string>
    <string name="have_account">Already have an account ?</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_slot">SlotActivity</string>
    <string name="title_payment">Payment</string>
    <string name="pay_button">Pay</string>
    <string name="title_settings">Settings</string>
    <string name="title_reservation">Reservation</string>
    <string name="title_or">Or</string>
    <string name="title_or_google">Login with Google</string>
    <string name="title_google">Continue with Google</string>
    <string name="hint_rfid">RFID Number</string>
    <string name="title_cal_pay">Calculate Payment</string>
    <string name="title_rfid">Calculate payment details</string>
    <string name="subtitile_rfid">Enter first 10 digits of alloted rfid card</string>
    <string name="title_payment_details">Payment Details</string>
    <string name="title_amount">₹ 15</string>
    <string name="title_pay">Pay Now</string>
    <string name="total_amount">AMOUNT PAYABLE</string>
    <string name="title_parking_details">Parking Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_personal_info">Personal Information</string>
    <string name="title_payment_history">Payment History</string>
    <string name="title_security">Security and Login</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="subtitle_settings">Manage information about you, your payments and your account in general</string>
    <string name="title_name">Name</string>
    <string name="save_button">Save</string>
    <string name="title_edit_name">Edit Name Details</string>
    <string name="title_edit_phone">Edit Phone Details</string>
    <string name="title_edit_email">Edit Email Details</string>
    <string name="title_about">About</string>
    <string name="title_help">Help and FAQs</string>
    <string name="title_report_issues">Report Issues</string>
    <string name="title_location">Location: </string>
    <string name="title_duration">Duration: </string>
    <string name="title_date">Date: </string>
    <string name="title_amount_paid">Amount Paid: </string>
    <string name="title_slot">Slot: </string>
    <string name="title_rfid_num">Rfid Number: </string>
</resources>
