<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_account_settings"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_settings"
            android:textSize="14sp"
            android:layout_marginBottom="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/personal_info_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_personal_info"
            app:icon="@drawable/ic_action_user"
            android:textAllCaps="false"
            app:iconPadding="12dp"
            app:iconTint="@android:color/black"
            android:textColor="@android:color/black"
            android:textAlignment="viewStart"
            android:textSize="18sp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/payment_history_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_payment_history"
            app:icon="@drawable/ic_action_history"
            android:textAllCaps="false"
            app:iconPadding="12dp"
            app:iconTint="@android:color/black"
            android:textColor="@android:color/black"
            android:textAlignment="viewStart"
            android:textSize="18sp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/help_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_help"
            app:icon="@drawable/ic_action_help"
            android:textAllCaps="false"
            app:iconPadding="12dp"
            app:iconTint="@android:color/black"
            android:textColor="@android:color/black"
            android:textAlignment="viewStart"
            android:textSize="18sp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/about_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_about"
            app:icon="@drawable/ic_action_about"
            android:textAllCaps="false"
            app:iconPadding="12dp"
            app:iconTint="@android:color/black"
            android:textColor="@android:color/black"
            android:textAlignment="viewStart"
            android:textSize="18sp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            app:icon="@drawable/ic_action_log_out"
            android:textAllCaps="false"
            app:iconPadding="12dp"
            app:iconTint="@android:color/black"
            android:textColor="@android:color/black"
            android:textAlignment="viewStart"
            android:textSize="18sp"/>
    </LinearLayout>
</layout>
