<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonalInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_personal_info"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/name_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:iconTint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_action_chevron_right"
            app:iconSize="30dp"
            app:iconGravity="end"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:iconTint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_action_chevron_right"
            app:iconSize="30dp"
            app:iconGravity="end"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/phone_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:iconTint="@android:color/darker_gray"
            android:textSize="18sp"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_action_chevron_right"
            app:iconSize="30dp"
            app:iconGravity="end"/>

    </LinearLayout>
</layout>