<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reservation">

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.example.parksmart.ui.payment.PaymentFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_payment">
        <action
            android:id="@+id/action_navigation_payment_to_paymentDetailsFragment"
            app:destination="@id/navigation_payment_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.example.parksmart.ui.reservation.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" />
    <fragment
        android:id="@+id/navigation_payment_details"
        android:name="com.example.parksmart.PaymentDetailsFragment"
        android:label="@string/title_payment_details"
        tools:layout="@layout/fragment_payment_details" >
        <argument android:name="rfid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.parksmart.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_personalInfoFragment"
            app:destination="@id/personalInfoFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_paymentHistoryFragment"
            app:destination="@id/paymentHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/personalInfoFragment"
        android:name="com.example.parksmart.PersonalInfoFragment"
        tools:layout="@layout/personal_info_fragment" >
        <action
            android:id="@+id/action_personalInfoFragment_to_editEmailFragment"
            app:destination="@id/editEmailFragment" />
        <action
            android:id="@+id/action_personalInfoFragment_to_editPhoneFragment"
            app:destination="@id/editPhoneFragment" />
        <action
            android:id="@+id/action_personalInfoFragment_to_editNameFragment"
            app:destination="@id/editNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/editEmailFragment"
        android:name="com.example.parksmart.EditEmailFragment"
        tools:layout="@layout/fragment_edit_email"/>
    <fragment
        android:id="@+id/editNameFragment"
        android:name="com.example.parksmart.EditNameFragment"
        tools:layout="@layout/fragment_edit_name"/>
    <fragment
        android:id="@+id/editPhoneFragment"
        android:name="com.example.parksmart.EditPhoneFragment"
        tools:layout="@layout/fragment_edit_phone"/>
    <fragment
        android:id="@+id/paymentHistoryFragment"
        android:name="com.example.parksmart.PaymentHistoryFragment"
        tools:layout="@layout/fragment_payment_history" />
</navigation>