<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpActivity">

    <data>
        <variable
            name="loginViewMdoel"
            type="com.example.parksmart.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_sign_up"
            android:textSize="28sp"
            android:textColor="@color/colorWhite"
            android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="8dp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="26dp"
            android:paddingTop="10dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="25sp"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:layout_marginBottom="18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        android:layout_marginBottom="18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:layout_marginBottom="18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:layout_marginBottom="18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        android:hint="@string/hint_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_sign_up"
                        android:layout_marginTop="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10sp">
                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:background="#c0c0c0"
                            android:layout_weight="2"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/title_or"
                            android:textAlignment="center"
                            android:layout_weight="1"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:background="#c0c0c0"
                            android:layout_weight="2"/>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/have_account"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/have_account"
                        android:layout_marginTop="10sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="18sp">
                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:background="#c0c0c0"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/title_or"
                            android:textAlignment="center"
                            android:layout_weight="1"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:background="#c0c0c0"
                            android:layout_weight="1"/>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/google_account"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_google"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</layout>